--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
-
+        
         <!--mongo数据库存储游戏世界信息和玩家信息（游戏对象）-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -60,10 +60,19 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- csv工具库 -->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-csv</artifactId>
         </dependency>
+        <!-- excel工具库-->
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+
 
         <!--反射工具库-->
         <dependency>
