--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tsjh_world_data?
 spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -39,10 +39,15 @@ spring.redis.timeout=1000
 
 
 # 自定义配置： 文件上传和数据库文件导出根目录
-file.upload.url=D:/gameserver/data/in
-file.download.url=D:/gameserver/data/out
+# for windows
+#file.upload.url=D:/gameserver/data/in
+#file.download.url=D:/gameserver/data/out
+# for my mac
+file.upload.url=/Users/andy/data/in
+file.download.url=/Users/andy/data/out
 
 # 日志文件配置
+# for windows
 logging.file.path=D:/gameserver/log
 logging.file.name=game.log
 
