完成攻击接口，但是还没有实现自动攻击的方法！

--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,16 @@
         <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.mud.game</groupId>
     <artifactId>mud-game-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
+    <packaging>jar</packaging>
     <name>mud-game-server</name>
     <description>a mud game server</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
     </properties>
 
     <dependencies>
