--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ file.download.url=/Users/andy/data/out
 
 # 日志文件配置
 # for windows
-logging.file.path=D:/gameserver/log
+#logging.file.path=D:/gameserver/log
 logging.file.name=game.log
 
 
