--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ netty-websocket.port=8001
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tsjh_world_data?serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
@@ -26,7 +26,7 @@ spring.data.mongodb.port=27017
 # for windows
 file.upload.url=C:/gameserver/data/in
 file.download.url=C:/gameserver/data/out
-file.icon.url=C:/nginx-1.18.0/html/client/icon
+file.icon.url=C:/gameserver/icon
 # for unix
 #file.upload.url=/var/www/data/in
 #file.download.url=/var/www/data/out
