--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
             <artifactId>commons-lang</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.13</version>
+        </dependency>
 
     </dependencies>
 
