--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
-        
+
         <!--mongo数据库存储游戏世界信息和玩家信息（游戏对象）-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -106,6 +106,12 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.73</version>
         </dependency>
 
         <dependency>
